--- a/web/web-all/src/main/resources/templates/payment/refundSuccess.html
+++ b/web/web-all/src/main/resources/templates/payment/refundSuccess.html
@@ -1,106 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
 		<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-		<title>订单提交成功</title>
-		<link rel="icon" href="/img/favicon.ico">
+		<title>订单退款页</title>
+		<link rel="icon" href="./img/favicon.ico">
 
 
     <link rel="stylesheet" type="text/css" href="/css/all.css" />
-		<link rel="stylesheet" type="text/css" href="/css/pages-pay.css" />
+    <link rel="stylesheet" type="text/css" href="/css/pages-paysuccess.css" />
 		<div th:include="common/head :: head"></div>
-	</head>
+</head>
 
-<body>
-<!--head-->
-<!-- 头部栏位 -->
-<!--页面顶部-->
-<div th:include="common/header :: header"></div>
+	<body>
+		<!--页面顶部-->
+		<div th:include="common/header :: header"></div>
 
-<div class="cart py-container" id="item">
-
-
-	<!--主内容-->
-	<div class="checkout py-container  pay">
-		<div class="checkout-tit">
-			<h4 class="tit-txt"><span class="success-icon"></span><span  class="success-info">订单提交成功，请您及时付款，以便尽快为您发货~~</span></h4>
-			<div class="paymark">
-				<span class="fl">请您在提交订单<em class="orange time">4小时</em>之内完成支付，超时订单会自动取消。订单号：<em>{{data.id}}</em></span>
-				<span class="fr"><em class="sui-lead">应付金额：</em><em  class="orange money">￥{{data.totalAmount}}</em></span>
-			</div>
-		</div>
-
-		<div class="check-info">
-			<h4>重要说明：</h4>
-			<ol>
-				<li>商城支付平台目前支持<span class="zfb">支付宝</span>支付方式。</li>
-				<li>其它支付渠道正在调试中，敬请期待。</li>
-				<li>为了保证您的购物支付流程顺利完成，请保存以下支付宝信息。</li>
-			</ol>
-		</div>
-
-
-		<div class="checkout-steps">
-			<!--收件人信息-->
-			<div class="step-tit">
-				<h5>支付平台</h5>
-			</div>
-			<div class="step-cont">
-				<ul class="payType">
-					<a :href="'http://api.gmall.com/api/payment/alipay/submit/'+data.id" target="_blank"><li><img src="./img/_/pay1.jpg"></li></a>
-					<a :href="'http://payment.gmall.com/weixin.html?orderId='+data.id" target="_blank"><li><img src="./img/_/pay3.jpg"></li></a>
-				</ul>
-
-			</div>
-			<div class="hr"></div>
-
-			<!--支付和送货-->
-			<div class="payshipInfo">
-				<div class="step-tit">
-					<h5>支付网银</h5>
-				</div>
-				<div class="step-cont">
-					<ul class="payType">
-						<li><img src="./img/_/pay10.jpg"></li>
-						<li><img src="./img/_/pay11.jpg"></li>
-						<li><img src="./img/_/pay12.jpg"></li>
-						<li><img src="./img/_/pay13.jpg"></li>
-						<li><img src="./img/_/pay14.jpg"></li>
-						<li><img src="./img/_/pay15.jpg"></li>
-						<li><img src="./img/_/pay16.jpg"></li>
-						<li><img src="./img/_/pay17.jpg"></li>
-						<li><img src="./img/_/pay18.jpg"></li>
-						<li><img src="./img/_/pay19.jpg"></li>
-						<li><img src="./img/_/pay20.jpg"></li>
-						<li><img src="./img/_/pay21.jpg"></li>
-						<li><img src="./img/_/pay22.jpg"></li>
-
-					</ul>
-				</div>
-				<div class="hr"></div>
-			</div>
-
-			<!--<div class="submit sui-text-center">-->
-				<!--<a class="sui-btn btn-danger btn-xlarge" href="paysuccess.html" target="_blank">立即支付</a>-->
-			<!--</div>-->
-			<div class="otherpay">
-				<div class="step-tit">
-					<h5>其他支付方式</h5>
-				</div>
-				<div class="step-cont">
-					<span><a href="weixinpay.html" target="_blank">微信支付</a></span>
-					<span>中国银联</span>
+		<div class="cart py-container">
+			<!--主内容-->
+			<div class="paysuccess">
+				<div class="success">
+					<h3><img src="/img/_/right.png" width="48" height="48">退款成功！</h3>
+					<div class="paydetail">
+					<!--<p>支付方式：微信</p>-->
+					<!--<p>支付金额：￥<em id="payMoney"></em>元</p>-->
+					<p class="button"><a href="http://order.gmall.com/myOrder.html" class="sui-btn btn-danger btn-xlarge">查看订单</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				    </div>
 				</div>
 			</div>
 		</div>
-	</div>
-
-</div>
-<!-- 底部栏位 -->
-<!--页面底部-->
+		<!-- 底部栏位 -->
+		<!--页面底部-->
 <div class="clearfix footer">
 	<div class="py-container">
 		<div class="footlink">
@@ -232,35 +164,9 @@
 	</div>
 </div>
 <!--页面底部END-->
-<!--页面底部END-->
-<script src="/js/api/trade.js"></script>
-<script th:inline="javascript">
-	var item = new Vue({
-		el: '#item',
-
-		data: {
-            orderId: [[${orderId}]], // 数据是否正在加载
-            data: {}
-		},
-
-        created() {
-            this.init()
-        },
-
-        methods: {
-            init() {
-                trade.getPayOrderInfo(this.orderId).then(response => {
-                    this.data = response.data.data
-                    console.log('成功')
-                })
-            }
-        }
-	})
-</script>
 
 
 
 
 </body>
-
 </html>
